objects/ASI_TH_CRM_PaymentRequest__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_GST_Rate__c</fullName>
        <label>GST Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generation_From_Date__c</fullName>
        <label>Generation From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generation_To_Date__c</fullName>
        <label>Generation To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Amount__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;SG&quot;),ASI_TH_CRM_Total_Amount__c +  ASI_CRM_SG_GST__c, ASI_CRM_Payment_Amount__c+ ASI_CRM_PH_Tax_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Heap_Size_Large__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heap Size Large</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IIT_Amount__c</fullName>
        <label>IIT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Incentive</fullName>
                </value>
                <value>
                    <fullName>Other Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Afterwards__c</fullName>
        <label>Invoice Afterwards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>发票后补</fullName>
                </value>
                <value>
                    <fullName>已补发票</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDEPVNum__c</fullName>
        <label>JDE PV Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_PO__c</fullName>
        <label>JDE PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Instruction_Sent_Time__c</fullName>
        <label>Latest Instruction Sent Time</label>
        <summarizedField>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Instruction_Sent_Time__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Instruction_Sent_Time__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Comfirm_Receipt__c</field>
            <operation>notEqual</operation>
            <value>No Need Receipt</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payment_Request__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Exceed_AP_Entitled_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed A&amp;P Entitled Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Total_Adjusted_Payment__c</fullName>
        <inlineHelpText>&quot;Total Adjusted Payment&quot; against &quot;Total Entitled Payment&quot;, which excludes tax.</inlineHelpText>
        <label>Total Adjusted Payment</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_MY_Adjusted_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Total_Adjustment_Amount__c</fullName>
        <formula>ASI_CRM_MY_Total_Adjusted_Payment__c - ASI_CRM_MY_Total_Entitled_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Adjustment Amount = Total Adjusted Payment - Total Entitled Payment</inlineHelpText>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Total_Entitled_Payment__c</fullName>
        <inlineHelpText>Total entitled amount based on contract, which excludes tax</inlineHelpText>
        <label>Total Entitled Payment</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_Net_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_FY_Payment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New FY Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Next_Approver__c</fullName>
        <label>ASI_CRM_Next Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Fx__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ASI_TH_CRM_Payment_Request&apos;, ASI_TH_CRM_Outlet__c, ASI_CRM_CN_OutletWS__r.Name)</formula>
        <label>Outlet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PH_Currency__c</fullName>
        <formula>IF( ASI_CRM_DF_DP__c== &quot;Duty Free&quot; , &quot;USD&quot;, &quot;PHP&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PH_Tax_Amount__c</fullName>
        <formula>ASI_CRM_Payment_Amount__c *0.12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PVRaiseDate__c</fullName>
        <label>PV Raise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pass_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PayTo3Party__c</fullName>
        <label>Pay To 3rd Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PayTo__c</fullName>
        <label>Pay To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Fund</fullName>
                </value>
                <value>
                    <fullName>Activation Fund</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Purchase Incentive</fullName>
                </value>
                <value>
                    <fullName>Bottle Rebate</fullName>
                </value>
                <value>
                    <fullName>Staff Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Premium_Region_Code__c</fullName>
        <formula>ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_Premium_JDE_Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prestige_Region_Code__c</fullName>
        <formula>ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_JDE_Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prestige Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_RequestsFjGD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RVP_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need RVP/RD Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Received__c</fullName>
        <label>Receipt Received</label>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Comfirm_Receipt__c</field>
            <operation>equals</operation>
            <value>Confirm Receipt</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payment_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reject_Return_Comments__c</fullName>
        <label>Reject/Return Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_By_Fx__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ASI_TH_CRM_Payment_Request&apos;,  ASI_TH_CRM_RequestBy__r.FirstName + &apos; &apos; + ASI_TH_CRM_RequestBy__r.LastName,  Owner:User.FirstName + &apos; &apos; + Owner:User.LastName )</formula>
        <label>Request By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Finance_Remarks__c</fullName>
        <label>Finance Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Finance_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_GST_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_GST__c</fullName>
        <formula>IF(  ASI_CRM_GST__c , (ASI_TH_CRM_Total_Amount__c+ ASI_CRM_Total_Adjusted_Amount__c ) * 0.07, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_System_Generated_Message__c</fullName>
        <formula>IF ( ASI_CRM_System_Generated__c ,
    &apos;THIS REQUEST IS GENERATED BY SYSTEM&apos;,
    &apos;THIS REQUEST IS CREATED MANUALLY&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Generated Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team__c</fullName>
        <formula>TEXT(Owner:User.ASI_CRM_Sales_Team__c)</formula>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sum_Of_Tax_Saving_Amount__c</fullName>
        <label>Sum Of Tax Saving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Requests (Supplier)</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sync_to_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Remark__c</fullName>
        <label>System Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Outlet_Grade__c</fullName>
        <formula>TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Outlet__r.ASI_KOR_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Code_for_Tax_Saving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code for Tax Saving</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payment Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Tax_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Tax Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Saving_Category__c</fullName>
        <label>Tax Saving Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAT-IN Deduct</fullName>
                </value>
                <value>
                    <fullName>0% Mark Up</fullName>
                </value>
                <value>
                    <fullName>10% Mark U</fullName>
                </value>
                <value>
                    <fullName>WHT IIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalPayment__c</fullName>
        <formula>ASI_TH_CRM_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Adjusted Payment, including tax</inlineHelpText>
        <label>Total Payment (MY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Adjusted_Amount__c</fullName>
        <label>Total Adjusted Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_Difference_Adjusted_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount_Fx__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ASI_TH_CRM_Payment_Request&apos;,  ASI_TH_CRM_Total_Amount__c ,  ASI_CRM_CN_Total_Payment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cash_Amount__c</fullName>
        <label>Total Cash Amount</label>
        <summarizedField>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>Cash</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CN Payee</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_No_of_Sales_Support__c</fullName>
        <label>Total No. of Sales Support</label>
        <summaryFilterItems>
            <field>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_CRM_SG_Type__c</field>
            <operation>equals</operation>
            <value>Sales Support</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Payee_Line__c</fullName>
        <label>Total Payee Line</label>
        <summaryFilterItems>
            <field>ASI_CRM_CN_PH_Payee_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CN Payee</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payment_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Payment_Amount__c</fullName>
        <formula>ASI_CRM_CN_Total_BRSF_Actual_Amount__c + ASI_TH_CRM_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Variable_Amount__c</fullName>
        <label>Total Variable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_User_Status__c</fullName>
        <formula>IF(Owner:User.IsActive,&quot;Active&quot;,&quot;Inactive&quot;)</formula>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VAT_Registered__c</fullName>
        <formula>ASI_TH_CRM_Vendor__r.ASI_MFM_Site_Code__c= &quot;PHVAT&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Registered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vendor_Name__c</fullName>
        <formula>ASI_TH_CRM_Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select correct Vendor</errorMessage>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier (SG)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Requests (Vendor)</relationshipLabel>
        <relationshipName>ASI_CRM_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Cut_Off_Date__c</fullName>
        <label>Volume Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Option__c</fullName>
        <formula>TEXT( ASI_TH_CRM_Contract__r.ASI_CRM_Volume_Option__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract_No__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 4 OR 5) AND 2) OR 3 OR 6 OR (7 AND 8)</booleanFilter>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.ASI_CRM_CN_Contract_Upload__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Contract</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI TH CRM Contract</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>contains</operation>
                <value>prasia_soa</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_TH_CRM_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM MY Contract, ASI CRM MY Contract (Final)</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM SG Contract (Read-Only)</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.ASI_TH_CRM_Contract_Status__c</field>
                <operation>notEqual</operation>
                <value>Completed</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PaymentRequests_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_DeliveryAddress__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Head_of_Finance_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Finance and Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Head_of_National_On_Trade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of National On Trade</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet_Code__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_TH_CRM_Outlet__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_TH_CRM_Outlet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PORaiseDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>PO Raise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                    <default>true</default>
                    <label>60 days</label>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Request_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Request External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Region__c</fullName>
        <formula>ASI_TH_CRM_Contract__r.ASI_TH_CRM_Outlet__r.ASI_KOR_Addr_Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Regional_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_RequestBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TH_CRM_PaymentRequests_Reques_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Pending Head of National On Trade</fullName>
                </value>
                <value>
                    <fullName>Pending Head of Finance and Operations</fullName>
                </value>
                <value>
                    <fullName>Pending Managing Director</fullName>
                </value>
                <value>
                    <fullName>Pending PRA Chairman</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Submit for Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TH_CRM_PaymentRequestLineItem__c.ASI_TH_CRM_Payment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_VAT__c</fullName>
        <label>VAT %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>7%</fullName>
                </value>
                <value>
                    <fullName>SVAT(7%)</fullName>
                </value>
                <value>
                    <fullName>IVAT(7%)</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                    <default>true</default>
                    <label>10%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_VendorAddress__c</fullName>
        <formula>ASI_TH_CRM_Vendor__r.ASI_MFM_Address_Line_1__c
+ &apos; &apos; +
ASI_TH_CRM_Vendor__r.ASI_MFM_Address_Line_2__c
+ &apos; &apos; +
ASI_TH_CRM_Vendor__r.ASI_MFM_Address_Line_3__c
+ &apos; &apos; +
ASI_TH_CRM_Vendor__r.ASI_MFM_Address_Line_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Vendor_Code__c</fullName>
        <formula>ASI_TH_CRM_Vendor__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM PH Payment Request, ASI CRM PH Payment Request Read Only</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier (SG), PH Supplier</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM PH Payment Request, ASI CRM PH Payment Request Read Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>ASI_TH_CRM_PaymentRequests_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_PR_No_Data_Migration__c</fullName>
        <label>Payment Request No. (Data Migration)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>